--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.embabel.benchmark</groupId>
+    <groupId>com.incept5.benchmark</groupId>
     <artifactId>llm-benchmark-agent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -139,7 +139,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.embabel.benchmark.BenchmarkApplicationKt</mainClass>
+                    <mainClass>com.incept5.benchmark.BenchmarkApplicationKt</mainClass>
                 </configuration>
                 <executions>
                     <execution>
